# Email_bot

./: .env-dev  .gitignore  Makefile  README.md  black.toml  build_images  docker-compose.yml  pyproject.toml  test.py  text.txt
bot_backend/bot_backend/: settings.py
bot_backend/email_server/: apps.py
nginx/: Dockerfile  nginx.conf
src/bot_backend/: Dockerfile
src/bot_backend/bot_backend/: celery.py  settings.py  urls.py
src/bot_backend/email_server/: admin.py  apps.py  email_client.py  email_reader.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/bot_backend/email_server/migrations/: 0001_initial.py
src/bot_backend/email_server/utils/: email_client.py  fernet.py
src/telegram_bot/: Dockerfile  aiogram_run.py  create_bot.py
src/telegram_bot/handlers/: add_email.py  menu.py  start.py  states.py
src/telegram_bot/keyboards/: all_keyboards.py
src/telegram_bot/utils/: __init__.py  api_client.py  http_client.py  utils.py
telegram_bot/: bot.py
